Fixed max height to avoid empty space in dark mode

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -1,7 +1,10 @@
 @tailwind base;
 @layer base {
   html{
-    @apply h-full max-h-full font-mono subpixel-antialiased;
+    @apply h-full  max-h-screen font-mono subpixel-antialiased;
+  }
+  body{
+    height: 100%
   }
   h1{
     @apply text-3xl py-2 font-semibold;
